<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SnakeGameActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/game_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/action_bar_text_color"
        app:titleTextColor="@color/action_bar_text_color" />

    <RelativeLayout
        android:id="@+id/sub_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/game_toolbar">

        <TextView
            android:id="@+id/score_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:text="@string/score_label_text"
            android:textColor="@color/primary_text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/score_label"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/default_score_text"
            android:textColor="@color/correct_text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_best_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@+id/score_text"
            android:gravity="center_vertical"
            android:text="@string/score_best_label_text"
            android:textColor="@color/primary_text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_best_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/score_best_label"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/default_score_text"
            android:textColor="@color/warning_text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/restart_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/warning_text_color"
            android:elevation="8dp"
            android:stateListAnimator="@null"
            android:text="@string/restart_button_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:elevation="12dp" />
    </RelativeLayout>

    <com.rikucherry.simplesnake.views.SquareFrameLayout
        android:id="@+id/game_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/frame_canvas_background"
        app:layout_constraintTop_toBottomOf="@+id/sub_action_bar">

        <com.rikucherry.simplesnake.views.GameView
            android:id="@+id/game_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp" />

    </com.rikucherry.simplesnake.views.SquareFrameLayout>


    <RelativeLayout
        android:id="@+id/direction_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_frame">

        <ImageButton
            android:id="@+id/arrow_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/arrow_left_button"
            android:background="@drawable/button_up_selector"
            android:contentDescription="@string/up_button_description" />

        <ImageButton
            android:id="@+id/arrow_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrow_up_button"
            android:background="@drawable/button_left_selector"
            android:contentDescription="@string/left_button_description" />

        <ImageButton
            android:id="@+id/arrow_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrow_up_button"
            android:layout_toEndOf="@+id/arrow_up_button"
            android:background="@drawable/button_right_selector"
            android:contentDescription="@string/right_button_description" />

        <ImageButton
            android:id="@+id/arrow_down_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrow_left_button"
            android:layout_toEndOf="@+id/arrow_left_button"
            android:background="@drawable/button_down_selector"
            android:contentDescription="@string/down_button_description" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>